Initial implementation of svn diff command.
Add a diff command to the Subversion context menu which shows
local changes in the working copy. Diffing to the repository is
not supported and all svn diff options are hard-coded for now.

--- a/tvp-svn-helper/Makefile.am
+++ b/tvp-svn-helper/Makefile.am
@@ -46,6 +46,8 @@ tvp_svn_helper_SOURCES =						\
 	tsh-copy.c							\
 	tsh-delete.h							\
 	tsh-delete.c							\
+	tsh-diff.h							\
+	tsh-diff.c							\
 	tsh-export.h							\
 	tsh-export.c							\
 	tsh-import.h							\
@@ -78,6 +80,8 @@ tvp_svn_helper_SOURCES =						\
 	tsh-dialog-common.c						\
 	tsh-blame-dialog.h						\
 	tsh-blame-dialog.c						\
+	tsh-diff-dialog.h						\
+	tsh-diff-dialog.c						\
 	tsh-file-dialog.h						\
 	tsh-file-dialog.c						\
 	tsh-file-selection-dialog.h					\
