--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,8 @@ endif
 distclean-local:
 	rm -rf *.spec *.cache *~
 
+distuninstallcheck_listfiles = find . -type f -print | grep -v ./share/icons/hicolor/icon-theme.cache
+
 rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
 	@rm -f $(PACKAGE)-$(VERSION).tar.gz
