--- a/configure.ac.in
+++ b/configure.ac.in
@@ -46,6 +46,7 @@ AM_INIT_AUTOMAKE([1.8 dist-bzip2 tar-ustar])
 AM_CONFIG_HEADER([config.h])
 AC_CONFIG_MACRO_DIRS([m4])
 AM_MAINTAINER_MODE()
+m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 dnl *******************************
 dnl *** Check for UNIX variants ***
