--- a/configure.ac.in
+++ b/configure.ac.in
@@ -66,7 +66,7 @@ dnl ********************************
 AC_PROG_CC()
 AC_PROG_LD()
 AC_PROG_INSTALL()
-IT_PROG_INTLTOOL()
+IT_PROG_INTLTOOL([0.36.3])
 AM_PROG_CC_C_O()
 
 dnl **************************
