--- a/configure.ac.in
+++ b/configure.ac.in
@@ -48,13 +48,6 @@ AC_CONFIG_MACRO_DIRS([m4])
 AM_MAINTAINER_MODE()
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
-dnl *******************************
-dnl *** Check for UNIX variants ***
-dnl *******************************
-AC_AIX()
-AC_ISC_POSIX()
-AC_MINIX()
-
 dnl ********************************
 dnl *** Check for common headers ***
 dnl ********************************
@@ -64,9 +57,7 @@ dnl ********************************
 dnl *** Check for basic programs ***
 dnl ********************************
 AC_PROG_CC()
-AC_PROG_LD()
 AC_PROG_INSTALL()
-IT_PROG_INTLTOOL([0.36.3])
 AM_PROG_CC_C_O()
 
 dnl **************************
@@ -78,7 +69,11 @@ LT_INIT([disable-static])
 dnl ******************************
 dnl *** Check for i18n support ***
 dnl ******************************
-XDT_I18N([@LINGUAS@])
+GETTEXT_PACKAGE="$PACKAGE"
+AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [Name of default gettext domain])
+AC_SUBST([GETTEXT_PACKAGE])
+AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.19.8])
 
 dnl ***********************************
 dnl *** Check for required packages ***
@@ -111,8 +106,8 @@ fi
 AM_CONDITIONAL([HAVE_SUBVERSION], [test x"$found_subversion" = x"yes"])
 
 AC_ARG_ENABLE([git], 
-    AC_HELP_STRING([--enable-git], [Enable git (default)])
-AC_HELP_STRING([--disable-git], [Disable git]),
+    AS_HELP_STRING([--enable-git], [Enable git (default)])
+AS_HELP_STRING([--disable-git], [Disable git]),
     [check_for_git=$enableval], [check_for_git=yes])
 AC_MSG_CHECKING([for optional package git])
 if test x"$check_for_git" = x"yes"; then
@@ -147,7 +142,7 @@ AC_MSG_CHECKING([PLATFORM_LDFLAGS])
 AC_MSG_RESULT([$PLATFORM_LDFLAGS])
 AC_SUBST([PLATFORM_LDFLAGS])
 
-AC_OUTPUT([
+AC_CONFIG_FILES([
 Makefile
 icons/Makefile
 icons/16x16/Makefile
@@ -158,6 +153,7 @@ thunar-vcs-plugin/Makefile
 tvp-svn-helper/Makefile
 tvp-git-helper/Makefile
 ])
+AC_OUTPUT()
 
 dnl ***************************
 dnl *** Print configuration ***
