Replace deprecated exo with libxfce4ui 4.21.0
Related: xfce/exo!87

--- a/tvp-git-helper/Makefile.am
+++ b/tvp-git-helper/Makefile.am
@@ -81,6 +81,7 @@ tvp_git_helper_CPPFLAGS =						\
 
 tvp_git_helper_CFLAGS =					\
 	$(PLATFORM_CFLAGS)					\
+	$(LIBXFCE4UI_CFLAGS)				\
 	$(LIBXFCE4UTIL_CFLAGS)				\
 	$(GTK_CFLAGS)						\
 	$(GLIB_CFLAGS)						\
@@ -89,6 +90,7 @@ tvp_git_helper_CFLAGS =					\
 
 tvp_git_helper_LDFLAGS =				\
 	$(PLATFORM_LDFLAGS)					\
+	$(LIBXFCE4UI_LIBS)				\
 	$(LIBXFCE4UTIL_LIBS)				\
 	$(GTK_LIBS)							\
 	$(GLIB_LIBS)						\
