--- a/tvp-svn-helper/Makefile.am
+++ b/tvp-svn-helper/Makefile.am
@@ -133,4 +133,7 @@ tvp_svn_helper_LDFLAGS =					\
 	$(APR_LIBS)								\
 	$(EXO_LIBS)
 
+EXTRA_DIST =								\
+	meson.build
+
 # vi:set ts=8 sw=8 noet ai nocindent:
