--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,7 @@
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-XDT_VERSION_INIT([0.3.0], [git])
+XDT_VERSION_INIT([0.4.0])
 m4_define([copyright_year], [2025])
 
 dnl ***************************
